[project]
name = "comfyui-vextra-nodes"
description = "Nodes: Pixel Sort, Swap Color Mode, Solid Color, Glitch This, Add Text To Image, Play Sound, Prettify Prompt, Generate Noise, Flatten Colors"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/diontimmer/ComfyUI-Vextra-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Vextra-Nodes"
Icon = ""
